--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
+		"@react-three/drei": "^7.27.5",
 		"@react-three/fiber": "^7.0.0",
+		"@react-three/postprocessing": "^2.0.5",
 		"@remotion/cli": "^2.5.4",
 		"@remotion/eslint-config": "^2.5.4",
 		"@remotion/media-utils": "^2.5.4",
 		"@remotion/renderer": "^2.5.4",
 		"@remotion/three": "^2.5.4",
+		"axios": "^0.24.0",
 		"eslint": "^7.15.0",
+		"express": "^4.17.1",
+		"form-data": "^4.0.0",
+		"postprocessing": "^6.23.3",
 		"prettier": "^2.2.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-three-fiber": "^6.0.13",
 		"remotion": "^2.5.4",
 		"three": "^0.134.0",
 		"typescript": "4.4.2"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.13",
 		"@types/react": "^17.0.0",
 		"@types/three": "^0.128.0",
 		"@types/web": "^0.0.46"
