--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"lib": ["es2015"],
 		"esModuleInterop": true,
 		"skipLibCheck": true,
+		"noImplicitAny": false,
 		"forceConsistentCasingInFileNames": true
 	}
 }
